# syslens

./: .editorconfig  .gitignore  README.md
.ai/bug-fixer/: metrics.json
.ai/bug-fixer/reports/: _bug-fixer-report-20260101.html
.ai/tasks/startup/: startup-archived-2025-12-30.md  startup.md
.ai/tasks/syslens/: archived-2026-01.md  syslens.md
.ai/tasks/syslens/archive/2026 01 January/: syslens-January-17-2026.md
.ai/tasks/syslens/tasks/: 1.md  1.plan.md  1.work-log.md  2.md  2.plan.md  2.work-log.md  3.md  3.plan.md  3.work-log.md
.claude/: CLAUDE.md  jira.json  settings.json  settings.local.json
.github/workflows/: build-release.yml  ci.yml
.husky/: pre-commit
___ai_files/reports/: _branch-merge-report-example.html  _db-change-report-example.html
___ai_files/specs/: _spec-hardware-images.md
___ai_files/tasks/: .active
___ai_files/tasks/startup/: startup-archived-2025-12-29.md
___ai_files/tasks/syslens/: archived-2026-01.md  jira-tasks.md  syslens.md
docs/: CHANGELOG-tasks-0.md  IDE_SETUP.md  RELEASE_CHECKLIST.md  TAURI_IPC_COMMANDS.md
projects/backend/: Cargo.toml  clippy.toml  tauri.conf.json
projects/backend/capabilities/: default.json
projects/backend/icons/: icon.icns
projects/backend/resources/: device_database.json
projects/backend/resources/ids/: usb.ids
projects/backend/src/: lib.rs  main.rs  state.rs
projects/backend/src-tauri/: tauri.conf.json
projects/backend/src-tauri/capabilities/: default.json
projects/backend/src/collectors/: hardware.rs  mod.rs  network.rs  process.rs  service.rs  storage.rs  system.rs
projects/backend/src/commands/: device_info.rs  hardware.rs  mod.rs  network.rs  process.rs  service.rs  storage.rs  system.rs
projects/backend/src/hwids/: mod.rs  pci_ids.rs  updater.rs  usb_ids.rs
projects/backend/src/models/: device_info.rs  hardware.rs  mod.rs  network.rs  process.rs  service.rs  storage.rs  system.rs
projects/backend/src/services/: ai_agent.rs  cache_manager.rs  claude_client.rs  device_enrichment.rs  icon_cache.rs  image_cache.rs  internet_fetcher.rs  knowledge_store.rs  local_database.rs  mod.rs
projects/backend/src/services/device_sources/: amdproduct.rs  intelark.rs  manufacturer.rs  memory.rs  mod.rs  monitor.rs  motherboard.rs  storage.rs  techpowerup.rs  wikichip.rs  wikipedia.rs
projects/branding/: IMPLEMENTATION-GUIDE.md  README.md
projects/branding/syslens/: BRAND.md  NEW-LOGO-CONCEPTS.md  history.html
projects/branding/syslens/v1/: README.md  example-site.html  index.html  index.html.backup  pulse-variations.html  styleguide.html  wordmarks.html
projects/branding/syslens/v1/assets/: colors.css  fonts.css
projects/ui/: angular.json  eslint.config.js  karma.conf.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
projects/ui/src/: index.html  styles.scss
projects/ui/src/app/: app.component.ts  app.config.ts  app.routes.ts
projects/ui/src/app/core/models/: device-info.model.ts  hardware.model.ts  index.ts  network.model.ts  process.model.ts  service.model.ts  (+2 more)
projects/website/: README.md  package-lock.json  vercel.json
projects/website/src/app/: globals.css  layout.tsx  page.tsx
projects/website/src/app/resources/: page.tsx
projects/website/src/hooks/: useGitHubRelease.ts
specs/: _spec-device-info.md  app-prompt.md  application.spec.md  directory-structure.spec.md  hardware-config.spec.md  networking-config.spec.md  storage-config.spec.md  system-config.spec.md
todo/startup/: startup-archived-2025-12-29.md  startup.md
(+54 files in other folders)
