[package]
name = "syslens"
version = "0.1.0"
description = "System monitoring and configuration viewer"
authors = ["Syslens"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System information
sysinfo = "0.31"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_System_Performance",
    "Win32_System_Power",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
]}
wmi = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
